metrics/snmp/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: snmp-exporter
  labels:
    k8s-app: snmp-exporter
spec:
  ports:
    - name: http
      port: 9116
      protocol: TCP
  selector:
    name: snmp-exporter
